[workspace]
members = [
    "core",
    "render/soft-2d/base",
    "render/soft-2d",
    "render/soft-3d",
    "render/wgpu-2d",
    "render/wgpu-3d",
    "frontend/desktop",
    "frontend/desktop-sdl2",
    "frontend/web/crate",
]
resolver = "2"

[profile.release]
debug = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = false
lto = true
codegen-units = 1

[patch.crates-io]
sdl2 = { path = '/origin/home/jmjoy/workspace/rust/sdl2' }
